[package]

name = "servo"
version = "0.0.1"
authors = ["The Servo Project Developers"]

[lib]
name = "servo"
crate-type = ["rlib"]

[[bin]]
name = "servo"
test = false
doc = false
bench = false

[[test]]
name = "reftest"
path = "tests/reftest.rs"
harness = false

[[test]]
name = "contenttest"
path = "tests/contenttest.rs"
harness = false

[features]
# default = ["glfw_app"]
default = ["gonk", "gonk_app"]
gonk = []

[dependencies.compositing]
path = "components/compositing"

[dependencies.net]
path = "components/net"

[dependencies.msg]
path = "components/msg"

[dependencies.util]
path = "components/util"

[dependencies.script]
path = "components/script"

[dependencies.layout]
path = "components/layout"

[dependencies.gfx]
path = "components/gfx"

[dependencies.glfw_app]
path = "ports/glfw"
optional = true

[dependencies.gonk_app]
path = "ports/gonk/app"
optional = true

[dependencies.url]
git = "https://github.com/servo/rust-url"

[target.arm-linux-androideabi]
linker = "/home/fabrice/dev/servo/ports/gonk/toolchain/arm-linux-androideabi-g++"
ar     = "/home/fabrice/dev/servo/ports/gonk/toolchain/arm-linux-androideabi-ar"